--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require-dev": {
         "laravel/pint": "^1.0",
         "pestphp/pest": "^2.34",
+        "pestphp/pest-plugin-type-coverage": "^2.8",
         "spatie/ray": "^1.41"
     },
     "autoload": {
